# osbuild

./: .cirrus.yml  .docopt  CMakeLists.txt  Dockerfile.alpine  Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  README.md
.github/workflows/: github-actions.yml
src/: bsd.h  build_deps.h  darwin_build_deps.c  distribution.c  distribution.h  docopt.c  docopt.h  errors.h  freebsd_build_deps.c  linux_build_deps.c  linux_version.h  macos_build_deps.c  main.c  netbsd_build_deps.c  posix.c  posix.h  solaris_build_deps.c  stdbool.h  systemd.c  systemd.h  version.c  version.h  version.h.in  win_build_deps.c
src/sys/: README.md  string.c  svn_private_config.h  sysinfo.c
